# production-grade-agentic-system

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
src/: __init__.py  main.py
src/api/: __init__.py
src/api/routes/: __init__.py  auth.py  chat.py
src/config/: settings.py
src/core/: __init__.py
src/core/langgraph/: __init__.py  edges.py  graph.py  nodes.py
src/data/: db_manager.py
src/data/models/: database.py
src/data/schemas/: auth.py  chat.py  graph.py
src/services/: __init__.py  database.py  llm.py
src/system/: logs.py  middleware.py  rate_limit.py  telemetry.py
src/utils/: __init__.py  auth.py  graph.py  sanitization.py
